@@ -1,3 +1,11 @@
+2003-01-21  Jon K Hellan  <hellan@acm.org>
+
+	* html_read.c (html_append_text): New function. Append text to
+	buffer, normalizing all sequences of whitespace to a single space.
+	(html_read_content): Use html_append_text instead of htmlNodeDump
+	for content. Make content buffer a GString.
+	(html_read_row):  Make content buffer a GString.
+
 2003-01-17  Jon K Hellan  <hellan@acm.org>
 
 	* html_read.c (html_file_open): Skip byte order mark. Arguably,
